--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.4",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "nanoscroller": "^0.8.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "save-svg-as-png": "^1.2.0",
