--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.2",
+    "babel-polyfill": "^6.23.0",
     "bootstrap-sass": "^3.3.7",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.4",
