--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "bootstrap-sass": "^3.3.7",
+    "bulma": "^0.5.3",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.4",
     "jquery": "^3.2.1",
+    "jquery-resizable": "^1.0.6",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "nanoscroller": "^0.8.7",
@@ -37,6 +39,8 @@
     "vue-clickaway": "^2.1.0",
     "vue-codemirror": "^3.0.8",
     "vue-ls": "^2.2.18",
+    "vue-multipane": "^0.9.5",
+    "vue-resize-handle": "^1.0.0",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
