--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draw-viz-app",
-  "version": "0.1.7",
+  "version": "0.1.5",
   "description": "Graphviz editor & rendering app with live updating.",
   "author": "AWolf81 <awolf2904@gmail.com>",
   "private": true,
@@ -9,7 +9,7 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "pre-deploy": "npm run build",
-    "deploy": "surge --domain https://drawviz.surge.sh",
+    "deploy": "surge --domain drawviz.surge.sh",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
@@ -20,11 +20,9 @@
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "bootstrap-sass": "^3.3.7",
-    "bulma": "^0.5.3",
     "hammerjs": "^2.0.8",
     "headroom.js": "^0.9.4",
     "jquery": "^3.2.1",
-    "jquery-resizable": "^1.0.6",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "nanoscroller": "^0.8.7",
@@ -39,8 +37,6 @@
     "vue-clickaway": "^2.1.0",
     "vue-codemirror": "^3.0.8",
     "vue-ls": "^2.2.18",
-    "vue-multipane": "^0.9.5",
-    "vue-resize-handle": "^1.0.0",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
@@ -79,10 +75,9 @@
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
-    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
