--- a/package.json
+++ b/package.json
@@ -1,124 +1,62 @@
 {
   "name": "draw-viz-app",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "Graphviz editor & rendering app with live updating.",
   "author": "AWolf81 <awolf2904@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
     "pre-deploy": "npm run build",
-    "deploy": "surge --domain https://drawviz.surge.sh",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "deploy": "surge --domain https://drawviz.surge.sh"
   },
   "dependencies": {
-    "animate.css": "^3.6.1",
-    "axios": "^0.16.2",
-    "babel-polyfill": "^6.23.0",
-    "bootstrap-sass": "^3.3.7",
-    "bulma": "^0.5.3",
-    "hammerjs": "^2.0.8",
-    "headroom.js": "^0.9.4",
-    "jquery": "^3.3.1",
-    "jquery-resizable": "^1.0.6",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "nanoscroller": "^0.8.7",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.7",
-    "save-svg-as-png": "^1.3.1",
-    "spinkit": "^1.2.5",
+    "animate.css": "3.6.1",
+    "axios": "0.18.0",
+    "babel-polyfill": "6.23.0",
+    "bootstrap-sass": "3.3.7",
+    "bulma": "0.7.2",
+    "hammerjs": "2.0.8",
+    "headroom.js": "0.9.4",
+    "jquery": "3.3.1",
+    "jquery-resizable": "1.0.6",
+    "lodash": "4.17.5",
+    "moment": "2.21.0",
+    "nanoscroller": "0.8.7",
+    "node-sass": "4.7.2",
+    "register-service-worker": "1.5.2",
+    "sass-loader": "7.1.0",
+    "save-svg-as-png": "1.3.1",
+    "spinkit": "1.2.5",
     "svg-pan-zoom": "github:ariutta/svg-pan-zoom",
-    "viz.js": "^1.8.1",
-    "vue": "^2.5.15",
-    "vue-bootstrap-modal": "^0.1.13",
-    "vue-clickaway": "^2.1.0",
-    "vue-codemirror": "^3.1.8",
-    "vue-ls": "^2.4.1",
-    "vue-multipane": "^0.9.5",
-    "vue-resize-handle": "^1.0.0",
-    "vue-router": "^2.8.1",
-    "vuex": "^2.5.0"
+    "viz.js": "2.1.2",
+    "vue": "2.5.21",
+    "vue-bootstrap-modal": "0.1.13",
+    "vue-clickaway": "2.1.0",
+    "vue-codemirror": "4.0.6",
+    "vue-ls": "3.2.0",
+    "vue-multipane": "0.9.5",
+    "vue-resize-handle": "1.0.0",
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.36.0",
-    "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^4.0.0",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "gh-pages": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.5.0",
-    "karma-sinon-chai": "^1.3.3",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.13",
-    "lolex": "^1.5.2",
-    "mocha": "^3.5.3",
-    "nightwatch": "^0.9.20",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.4.0",
-    "phantomjs-prebuilt": "^2.1.16",
-    "rimraf": "^2.6.2",
-    "selenium-server": "^3.10.0",
-    "semver": "^5.5.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.14.0",
-    "url-loader": "^0.5.8",
-    "vue-gh-pages": "^1.10.2",
-    "vue-loader": "^12.1.0",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.5.15",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@vue/cli-plugin-babel": "3.2.0",
+    "@vue/cli-plugin-eslint": "3.2.0",
+    "@vue/cli-plugin-pwa": "3.2.0",
+    "@vue/cli-plugin-unit-jest": "3.2.0",
+    "@vue/cli-service": "3.2.0",
+    "@vue/eslint-config-prettier": "4.0.1",
+    "@vue/test-utils": "1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
+    "eslint": "5.8.0",
+    "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-vue": "5.1.0",
+    "surge": "0.20.1",
+    "vue-template-compiler": "2.5.21"
+  }
 }
