--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draw-viz-app",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Graphviz editor & rendering app with live updating.",
   "author": "AWolf81 <awolf2904@gmail.com>",
   "private": true,
@@ -18,6 +18,7 @@
     "babel-polyfill": "6.23.0",
     "bootstrap-sass": "3.3.7",
     "bulma": "0.7.2",
+    "codemirror": "5.42.2",
     "hammerjs": "2.0.8",
     "headroom.js": "0.9.4",
     "jquery": "3.3.1",
